5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1649_1053.log
== TEST (2019-04-15 20:21:40) 
-- CODE:
c=input("fala tu:")

-- OUTPUT:
11.2482865705094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:21:45) 
-- CODE:
c=input("fala tu:")


-- OUTPUT:
11.2482865705094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:23:00) 
-- CODE:
c=input("fala tu:")
if (c = cervo)
print("cervo eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if (c = cervo)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:23:10) 
-- CODE:
c=input("fala tu:")
if (c = cervo):
print("cervo eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if (c = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:24:27) 
-- CODE:
c=input("fala tu:")
if(c = cervo):
print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(c = cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:24:28) 
-- CODE:
c=input("fala tu:")
if(c = cervo):
print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(c = cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:24:43) 
-- CODE:
c=input("fala tu:")
if(cervo):
print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 3
    print("cervo eh patrono do Harry Potter")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:25:19) 
-- CODE:
c=input("fala tu:")
if(cervo):
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:25:36) 
-- CODE:
c=input("fala tu:")
if(c = cervo):
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(c = cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:25:37) 
-- CODE:
c=input("fala tu:")
if(c = cervo):
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(c = cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:25:37) 
-- CODE:
c=input("fala tu:")
if(c = cervo):
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(c = cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:25:38) 
-- CODE:
c=input("fala tu:")
if(c = cervo):
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(c = cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:25:38) 
-- CODE:
c=input("fala tu:")
if(c = cervo):
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(c = cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:25:38) 
-- CODE:
c=input("fala tu:")
if(c = cervo):
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(c = cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:25:39) 
-- CODE:
c=input("fala tu:")
if(c = cervo):
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(c = cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:25:39) 
-- CODE:
c=input("fala tu:")
if(c = cervo):
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 2
    if(c = cervo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:26:14) 
-- CODE:
c=input("fala tu:")
if(c == cervo):
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(c == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:26:29) 
-- CODE:
c=input("fala tu:")
if c == cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c,"nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if c == cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:26:43) 
-- CODE:
c=input("fala tu:")
if c == cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if c == cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:27:23) 
-- CODE:
c=input("fala tu:")
if c == cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c +"" +"nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if c == cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:27:49) 
-- CODE:
patrono=input("fala tu:")
if patrono==cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c +"" +"nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:28:07) 
-- CODE:
patrono=input("fala tu:")
if patrono==cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c + +"nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:28:30) 
-- CODE:
patrono=input("fala tu:")
if patrono==cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c + "+"nao eh patrono do Harry Potter")

-- ERROR:
File "XXXX", line 5
    print(c + "+"nao eh patrono do Harry Potter")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:28:38) 
-- CODE:
patrono=input("fala tu:")
if patrono==cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c + "+ nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:29:22) 
-- CODE:
patrono=input("fala tu:")
if patrono==cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c +"  " + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:29:33) 
-- CODE:
patrono=input("fala tu:")
if patrono==cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c +" " + "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:29:42) 
-- CODE:
patrono=input("fala tu:")
if patrono==cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c +" "+ "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:29:51) 
-- CODE:
patrono=input("fala tu:")
if patrono==cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(c +" "+ "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:30:18) 
-- CODE:
patrono=input("fala tu:")
if patrono==cervo:
   print("cervo eh patrono do Harry Potter")
else:
	print(patrono +" "+ "nao eh patrono do Harry Potter")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono==cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:30:51) 
-- CODE:
patrono=input("fala tu:")
if patrono=="cervo":
   print("cervo eh patrono do Harry Potter")
else:
	print(patrono +" "+ "nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.153609
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
